--- a/TemplateForProjects.vcxproj
+++ b/TemplateForProjects.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="src\core\logger\logger.cpp" />
     <ClCompile Include="src\core\logger\LoggerMacro.h" />
+    <ClCompile Include="src\domain\entities\village\smithy\smithy.cpp" />
     <ClCompile Include="src\domain\repositories\inventory_repository\inventory_repository.cpp" />
     <ClCompile Include="src\domain\repositories\item_repository\item_repository.cpp" />
     <ClCompile Include="src\domain\services\json\models\book\book.cpp" />
@@ -143,6 +144,11 @@
     <ClInclude Include="src\domain\combat_system\combat_system.h" />
     <ClInclude Include="src\domain\entities\character\character.h" />
     <ClInclude Include="src\domain\entities\inventory\inventory.h" />
+    <ClInclude Include="src\domain\entities\village\npc\blacksmith.h" />
+    <ClInclude Include="src\domain\entities\village\npc\dealer.h" />
+    <ClInclude Include="src\domain\entities\village\npc\pickpocket.h" />
+    <ClInclude Include="src\domain\entities\village\npc\potion_maker.h" />
+    <ClInclude Include="src\domain\entities\village\smithy\smithy.h" />
     <ClInclude Include="src\domain\events\events_system\events_system.h" />
     <ClInclude Include="src\domain\repositories\inventory_repository\inventory_repository.h" />
     <ClInclude Include="src\domain\repositories\item_repository\item_repository.h" />
@@ -163,6 +169,7 @@
     <ClInclude Include="src\domain\services\json\repositories\sword_repository\sword_repository.h" />
     <ClInclude Include="src\domain\services\json\services\json_mapper\json_mapper.h" />
     <ClInclude Include="src\domain\services\json\services\json_reader\json_reader.h" />
+    <ClInclude Include="src\ui\providers\MainCharacter_Provider.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\data\local\inventory\inventory.json" />
