started create strange shop

--- a/TemplateForProjects.vcxproj
+++ b/TemplateForProjects.vcxproj
@@ -131,7 +131,6 @@
     <ClCompile Include="src\core\logger\LoggerMacro.h" />
     <ClCompile Include="src\domain\entities\village\smithy\smithy.cpp" />
     <ClCompile Include="src\domain\repositories\inventory_repository\inventory_repository.cpp" />
-    <ClCompile Include="src\domain\repositories\item_repository\item_repository.cpp" />
     <ClCompile Include="src\domain\services\json\models\book\book.cpp" />
     <ClCompile Include="src\domain\services\json\repositories\default_event_repository.h" />
     <ClCompile Include="src\domain\services\json\services\json_mapper\json_mapper.cpp" />
@@ -149,9 +148,9 @@
     <ClInclude Include="src\domain\entities\village\npc\pickpocket.h" />
     <ClInclude Include="src\domain\entities\village\npc\potion_maker.h" />
     <ClInclude Include="src\domain\entities\village\smithy\smithy.h" />
+    <ClInclude Include="src\domain\entities\village\strange_shop\strange_shop.h" />
     <ClInclude Include="src\domain\events\events_system\events_system.h" />
     <ClInclude Include="src\domain\repositories\inventory_repository\inventory_repository.h" />
-    <ClInclude Include="src\domain\repositories\item_repository\item_repository.h" />
     <ClInclude Include="src\domain\services\inventory_service\IInventory_service.h" />
     <ClInclude Include="src\domain\services\inventory_service\inventory_service.h" />
     <ClInclude Include="src\domain\services\json\core\json_object.h" />
