--- a/TemplateForProjects.vcxproj.filters
+++ b/TemplateForProjects.vcxproj.filters
@@ -6,11 +6,11 @@
     <ClCompile Include="src\core\logger\LoggerMacro.h" />
     <ClCompile Include="src\domain\services\json\services\json_mapper\json_mapper.cpp" />
     <ClCompile Include="src\domain\services\json\services\json_reader\json_reader.cpp" />
-    <ClCompile Include="src\domain\repositories\item_repository\item_repository.cpp" />
     <ClCompile Include="src\domain\repositories\inventory_repository\inventory_repository.cpp" />
     <ClCompile Include="src\domain\services\json\models\book\book.cpp" />
     <ClCompile Include="src\domain\services\json\repositories\default_event_repository.h" />
     <ClCompile Include="src\ui\providers\events_provider.h" />
+    <ClCompile Include="src\domain\entities\village\smithy\smithy.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\core\logger\logger.h" />
@@ -19,7 +19,6 @@
     <ClInclude Include="src\domain\services\json\repositories\sword_repository\sword_repository.h" />
     <ClInclude Include="src\domain\services\json\services\json_mapper\json_mapper.h" />
     <ClInclude Include="src\domain\services\json\services\json_reader\json_reader.h" />
-    <ClInclude Include="src\domain\repositories\item_repository\item_repository.h" />
     <ClInclude Include="src\domain\entities\character\character.h" />
     <ClInclude Include="src\domain\entities\inventory\inventory.h" />
     <ClInclude Include="src\domain\repositories\inventory_repository\inventory_repository.h" />
@@ -38,6 +37,12 @@
     <ClInclude Include="src\domain\services\json\repositories\boss_event_repository.h" />
     <ClInclude Include="src\domain\combat_system\combat_system.h" />
     <ClInclude Include="src\ui\providers\MainCharacter_Provider.h" />
+    <ClInclude Include="src\domain\entities\village\npc\blacksmith.h" />
+    <ClInclude Include="src\domain\entities\village\npc\dealer.h" />
+    <ClInclude Include="src\domain\entities\village\npc\pickpocket.h" />
+    <ClInclude Include="src\domain\entities\village\npc\potion_maker.h" />
+    <ClInclude Include="src\domain\entities\village\smithy\smithy.h" />
+    <ClInclude Include="src\domain\entities\village\strange_shop\strange_shop.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\domain\services\json\assets\json\swords.json" />
