--- a/TemplateForProjects.vcxproj
+++ b/TemplateForProjects.vcxproj
@@ -131,7 +131,6 @@
     <ClCompile Include="src\core\logger\LoggerMacro.h" />
     <ClCompile Include="src\domain\entities\village\smithy\smithy.cpp" />
     <ClCompile Include="src\domain\repositories\inventory_repository\inventory_repository.cpp" />
-    <ClCompile Include="src\domain\services\json\models\book\book.cpp" />
     <ClCompile Include="src\domain\services\json\repositories\default_event_repository.h" />
     <ClCompile Include="src\domain\services\json\services\json_mapper\json_mapper.cpp" />
     <ClCompile Include="src\domain\services\json\services\json_reader\json_reader.cpp" />
@@ -150,13 +149,13 @@
     <ClInclude Include="src\domain\entities\village\potion_brewery\potion_brewery.h" />
     <ClInclude Include="src\domain\entities\village\smithy\smithy.h" />
     <ClInclude Include="src\domain\entities\village\strange_shop\strange_shop.h" />
+    <ClInclude Include="src\domain\entities\village\village.h" />
     <ClInclude Include="src\domain\events\events_system\events_system.h" />
     <ClInclude Include="src\domain\repositories\inventory_repository\inventory_repository.h" />
     <ClInclude Include="src\domain\services\inventory_service\IInventory_service.h" />
     <ClInclude Include="src\domain\services\inventory_service\inventory_service.h" />
     <ClInclude Include="src\domain\services\json\core\json_object.h" />
     <ClInclude Include="src\domain\services\json\core\json_parser.h" />
-    <ClInclude Include="src\domain\services\json\models\book\book.h" />
     <ClInclude Include="src\domain\services\json\models\events\boss_events\boss_events.h" />
     <ClInclude Include="src\domain\services\json\models\events\default_events\default_events.h" />
     <ClInclude Include="src\domain\services\json\models\potions\potions.h" />
@@ -170,6 +169,7 @@
     <ClInclude Include="src\domain\services\json\services\json_mapper\json_mapper.h" />
     <ClInclude Include="src\domain\services\json\services\json_reader\json_reader.h" />
     <ClInclude Include="src\ui\providers\MainCharacter_Provider.h" />
+    <ClInclude Include="src\ui\providers\village_provider.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\data\local\inventory\inventory.json" />
